--- a/styles/styles.css
+++ b/styles/styles.css
@@ -267,6 +267,7 @@ section {
   padding-right: 5rem;
 }
 .about-container .left-about p {
+  font-weight: 500;
   line-height: 2rem;
   color: var(--color-grey-1);
 }
@@ -278,7 +279,7 @@ section {
   display: flex;
   justify-content: center;
   font-size: 1.4rem;
-  margin-top: 0.5rem;
+  margin-top: 1rem;
   margin-bottom: 0.5rem;
   position: relative;
 }
@@ -295,16 +296,6 @@ section {
   text-align: center;
   padding: 3.5rem 0;
   padding-top: 0;
-}
-.stat-title::before {
-  content: "";
-  position: absolute;
-  left: 50%;
-  top: 0;
-  width: 40%;
-  height: 1px;
-  background-color: var(--color-grey-5);
-  transform: translateX(-50%);
 }
 
 /*Timeline*/
@@ -571,6 +562,9 @@ section {
 .main-btn:hover {
   transition: all 0.4s ease-out;
 }
+.main-btn:hover .btn-text {
+  color: #FFFFFF;
+}
 .main-btn:hover::before {
   width: 100%;
   height: 100%;
@@ -635,6 +629,19 @@ section {
 }
 
 @media screen and (max-width: 600px) {
+  .header-content .right-header .btn-con {
+    position: relative;
+    bottom: 0.5rem;
+    right: 20%;
+    padding-top: 1rem;
+    margin-left: auto;
+    padding-bottom: 1rem;
+    padding-left: 22%;
+  }
+  .about-container .right-about .about-item {
+    width: auto;
+    height: auto;
+  }
   .ami-title {
     margin-top: 2rem;
     margin-bottom: 2rem;
@@ -657,10 +664,6 @@ section {
     top: 1%;
     width: 35px;
     height: 35px;
-  }
-  .btn-con {
-    position: relative;
-    top: -2%;
   }
   .header-content {
     grid-template-columns: repeat(1, 1fr);
@@ -688,8 +691,11 @@ section {
     padding-top: 3rem;
   }
   .header-content .left-header .image {
+    top: 5%;
+    position: relative;
     margin: 0 auto;
     width: 90%;
+    height: 64%;
   }
   .controls {
     top: auto;
@@ -864,11 +870,18 @@ section {
     grid-template-columns: repeat(1, 1fr);
     padding-bottom: 6rem;
   }
+  .header-content .left-header .image {
+    height: 75%;
+  }
+  .header-content .btn-con {
+    margin-left: 36%;
+    padding-top: 3rem;
+  }
   .left-header .h-shape {
     display: none;
   }
   .left-header .image {
-    width: 90% !important;
+    width: 80% !important;
     margin: 0 auto !important;
   }
   .right-header {
@@ -878,7 +891,7 @@ section {
     margin: 0 auto;
   }
   .right-header .name {
-    font-size: 2.5rem !important;
+    font-size: 1.7rem !important;
     text-align: center;
     padding-top: 3rem;
   }
@@ -892,7 +905,6 @@ section {
     padding: 7rem 3rem;
   }
   .about-container .right-about {
-    padding-top: 4rem;
     grid-template-columns: repeat(2, 1fr);
   }
   .timeline {
