--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -261,6 +261,7 @@ section{
     .left-about {
         padding-right: 5rem;
         p {
+            font-weight: 500;
             line-height: 2rem;
             color: var(--color-grey-1);
         }
@@ -274,7 +275,7 @@ section{
     display: flex;
     justify-content: center;
     font-size: 1.4rem;
-    margin-top: 0.5rem;
+    margin-top: 1rem;
     margin-bottom: 0.5rem;
     position: relative;
 }
@@ -291,16 +292,6 @@ section{
     text-align: center;
     padding: 3.5rem 0;
     padding-top: 0;
-    &::before {
-        content: '';
-        position: absolute;
-        left: 50%;
-        top: 0;
-        width: 40%;
-        height: 1px;
-        background-color: var(--color-grey-5);
-        transform: translateX(-50%);
-    }
 }
 /*Timeline*/
 .timeline {
@@ -561,6 +552,9 @@ section{
     }
     &:hover{
         transition: all .4s ease-out;
+        .btn-text{
+            color:#FFFFFF;
+        }
         &::before{
             width: 100%;
             height: 100%;
