--- a/styles/styles.css
+++ b/styles/styles.css
@@ -108,7 +108,7 @@ section {
   position: fixed;
   z-index: 10;
   top: 50%;
-  right: 0.5%;
+  right: 0.2%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -464,7 +464,7 @@ section {
 }
 .contact-content-con .left-contact .contact-icon {
   display: flex;
-  margin-top: 2rem;
+  margin-top: 20px;
 }
 .contact-content-con .left-contact .contact-icon a {
   display: flex;
